Issue 830: Fixes for various failing tests, updates for CIM and RASD domain objects