@@ -18,75 +18,124 @@
  */
 package org.jclouds.vcloud.director.v1_5.domain.cim;
 
+import static com.google.common.base.Objects.equal;
 import static com.google.common.base.Preconditions.checkNotNull;
+import static org.jclouds.vcloud.director.v1_5.VCloudDirectorConstants.VCLOUD_1_5_NS;
+import static org.jclouds.vcloud.director.v1_5.VCloudDirectorConstants.VCLOUD_CIM_RASD_NS;
 
+import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+
+import javax.xml.bind.annotation.XmlAttribute;
+import javax.xml.bind.annotation.XmlElement;
+import javax.xml.bind.annotation.XmlEnum;
+import javax.xml.bind.annotation.XmlEnumValue;
+import javax.xml.bind.annotation.XmlType;
+
+import org.jclouds.vcloud.director.v1_5.domain.Link;
 
 import com.google.common.base.Function;
+import com.google.common.base.Objects;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
+import com.google.common.collect.Sets;
 
 /**
- * 
  * The ResourceAllocationSettingData class represents settings specifically
  * related to an allocated resource that are outside the scope of the CIM class
- * typically used to represent the resource itself. These settings include
- * information specific to the allocation that may not be visible to the
- * consumer of the resource itself. For example, a virtual processor may look
- * like a 2 ghz processor to the consumer (virtual computer system), however the
- * virtualization system may use time-slicing to schedule the the virtual
- * processor to only allow it to use 1 ghz.
+ * typically used to represent the resource itself.
+ *
+ * These settings include information specific to the allocation that may not
+ * be visible to the consumer of the resource itself. For example, a virtual
+ * processor may look like a 2 GHz processor to the consumer (virtual computer
+ * system), however the virtualization system may use time-slicing to schedule
+ * the the virtual processor to only allow it to use 1 GHz.
  * 
  * @author Adrian Cole
- * @see <a href=
- *      "http://dmtf.org/sites/default/files/cim/cim_schema_v2280/cim_schema_2.28.0Final-Doc.zip"
- *      />
- * 
+ * @author grkvlt@apache.org
+ * @see http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2.22.0/CIM_ResourceAllocationSettingData.xsd
  */
-public class ResourceAllocationSettingData extends ManagedElement {
+@XmlType(name = "CIM_ResourceAllocationSettingData_Type", namespace = VCLOUD_CIM_RASD_NS)
+public class ResourceAllocationSettingData {
 
    public static Builder builder() {
       return new Builder();
    }
 
-   /**
-    * {@inheritDoc}
-    */
-   @Override
    public Builder toBuilder() {
       return builder().fromResourceAllocationSettingData(this);
    }
 
-   public static class Builder extends ManagedElement.Builder {
+   public static class Builder {
 
-      protected String address;
-      protected String addressOnParent;
-      protected String allocationUnits;
-      protected Boolean automaticAllocation;
-      protected Boolean automaticDeallocation;
+      protected CimString elementName;
+      protected CimString instanceID;
+      protected CimString caption;
+      protected CimString description;
+      protected CimString address;
+      protected CimString addressOnParent;
+      protected CimString allocationUnits;
+      protected CimBoolean automaticAllocation;
+      protected CimBoolean automaticDeallocation;
       protected ConsumerVisibility consumerVisibility;
-      protected Long limit;
+      protected CimUnsignedLong limit;
       protected MappingBehavior mappingBehavior;
-      protected String otherResourceType;
-      protected String parent;
-      protected String poolID;
-      protected Long reservation;
-      protected String resourceSubType;
+      protected CimString otherResourceType;
+      protected CimString parent;
+      protected CimString poolID;
+      protected CimUnsignedLong reservation;
+      protected CimString resourceSubType;
       protected ResourceType resourceType;
-      protected Long virtualQuantity;
-      protected String virtualQuantityUnits;
-      protected Integer weight;
-      protected List<String> connections = Lists.newArrayList();
-      protected List<String> hostResources = Lists.newArrayList();
+      protected CimUnsignedLong virtualQuantity;
+      protected CimString virtualQuantityUnits;
+      protected CimUnsignedInt weight;
+      protected List<CimString> connections = Lists.newArrayList();
+      protected List<CimString> hostResources = Lists.newArrayList();
+      protected URI href;
+      protected String type;
+      private Set<Link> links = Sets.newLinkedHashSet();
+
+      /**
+       * @see ResourceAllocationSettingData#getElementName()
+       */
+      public Builder elementName(CimString elementName) {
+         this.elementName = elementName;
+         return this;
+      }
+
+      /**
+       *@see ResourceAllocationSettingData#getInstanceId()
+       */
+      public Builder instanceID(CimString instanceID) {
+         this.instanceID = instanceID;
+         return this;
+      }
+
+      /**
+       * @see ResourceAllocationSettingData#getCaption()
+       */
+      public Builder caption(CimString caption) {
+         this.caption = caption;
+         return this;
+      }
+
+      /**
+       * @see ResourceAllocationSettingData#getDescription()
+       */
+      public Builder description(CimString description) {
+         this.description = description;
+         return this;
+      }
 
       /**
        * @see ResourceAllocationSettingData#getAddress
        */
-      public Builder address(String address) {
+      public Builder address(CimString address) {
          this.address = address;
          return this;
       }
@@ -94,7 +143,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getAddressOnParent
        */
-      public Builder addressOnParent(String addressOnParent) {
+      public Builder addressOnParent(CimString addressOnParent) {
          this.addressOnParent = addressOnParent;
          return this;
       }
@@ -102,7 +151,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getAllocationUnits
        */
-      public Builder allocationUnits(String allocationUnits) {
+      public Builder allocationUnits(CimString allocationUnits) {
          this.allocationUnits = allocationUnits;
          return this;
       }
@@ -110,7 +159,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#isAutomaticAllocation()
        */
-      public Builder automaticAllocation(Boolean automaticAllocation) {
+      public Builder automaticAllocation(CimBoolean automaticAllocation) {
          this.automaticAllocation = automaticAllocation;
          return this;
       }
@@ -118,7 +167,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#isAutomaticDeallocation()
        */
-      public Builder automaticDeallocation(Boolean automaticDeallocation) {
+      public Builder automaticDeallocation(CimBoolean automaticDeallocation) {
          this.automaticDeallocation = automaticDeallocation;
          return this;
       }
@@ -134,7 +183,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getLimit
        */
-      public Builder limit(Long limit) {
+      public Builder limit(CimUnsignedLong limit) {
          this.limit = limit;
          return this;
       }
@@ -150,7 +199,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getOtherResourceType
        */
-      public Builder otherResourceType(String otherResourceType) {
+      public Builder otherResourceType(CimString otherResourceType) {
          this.otherResourceType = otherResourceType;
          return this;
       }
@@ -158,7 +207,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getParent
        */
-      public Builder parent(String parent) {
+      public Builder parent(CimString parent) {
          this.parent = parent;
          return this;
       }
@@ -166,7 +215,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getPoolID
        */
-      public Builder poolID(String poolID) {
+      public Builder poolID(CimString poolID) {
          this.poolID = poolID;
          return this;
       }
@@ -174,7 +223,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getReservation
        */
-      public Builder reservation(Long reservation) {
+      public Builder reservation(CimUnsignedLong reservation) {
          this.reservation = reservation;
          return this;
       }
@@ -182,7 +231,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getResourceSubType
        */
-      public Builder resourceSubType(String resourceSubType) {
+      public Builder resourceSubType(CimString resourceSubType) {
          this.resourceSubType = resourceSubType;
          return this;
       }
@@ -198,7 +247,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getVirtualQuantity
        */
-      public Builder virtualQuantity(Long virtualQuantity) {
+      public Builder virtualQuantity(CimUnsignedLong virtualQuantity) {
          this.virtualQuantity = virtualQuantity;
          return this;
       }
@@ -206,7 +255,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getVirtualQuantityUnits
        */
-      public Builder virtualQuantityUnits(String virtualQuantityUnits) {
+      public Builder virtualQuantityUnits(CimString virtualQuantityUnits) {
          this.virtualQuantityUnits = virtualQuantityUnits;
          return this;
       }
@@ -214,7 +263,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getWeight
        */
-      public Builder weight(Integer weight) {
+      public Builder weight(CimUnsignedInt weight) {
          this.weight = weight;
          return this;
       }
@@ -222,7 +271,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getConnections()
        */
-      public Builder connection(String connection) {
+      public Builder connection(CimString connection) {
          this.connections.add(checkNotNull(connection, "connection"));
          return this;
       }
@@ -230,7 +279,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getHostResources()
        */
-      public Builder hostResource(String hostResource) {
+      public Builder hostResource(CimString hostResource) {
          this.hostResources.add(checkNotNull(hostResource, "hostResource"));
          return this;
       }
@@ -238,7 +287,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getConnections
        */
-      public Builder connections(List<String> connections) {
+      public Builder connections(List<CimString> connections) {
          this.connections = Lists.newArrayList(checkNotNull(connections, "connections"));
          return this;
       }
@@ -246,8 +295,42 @@ public class ResourceAllocationSettingData extends ManagedElement {
       /**
        * @see ResourceAllocationSettingData#getHostResources
        */
-      public Builder hostResources(List<String> hostResources) {
+      public Builder hostResources(List<CimString> hostResources) {
          this.hostResources = Lists.newArrayList(checkNotNull(hostResources, "hostResources"));
+         return this;
+      }
+
+      /**
+       * @see ResourceAllocationSettingData#getType()
+       */
+      public Builder type(String type) {
+         this.type = type;
+         return this;
+      }
+
+      /**
+       * @see ResourceAllocationSettingData#getHref()
+       */
+      public Builder href(URI href) {
+         this.href = href;
+         return this;
+      }
+
+      /**
+       * @see ResourceAllocationSettingData#getLinks()
+       */
+      public Builder links(Set<Link> links) {
+         this.links = Sets.newLinkedHashSet(checkNotNull(links, "links"));
+         return this;
+      }
+
+      /**
+       * @see ResourceAllocationSettingData#getLinks()
+       */
+      public Builder link(Link link) {
+         if (links == null)
+            links = Sets.newLinkedHashSet();
+         this.links.add(checkNotNull(link, "link"));
          return this;
       }
 
@@ -255,75 +338,80 @@ public class ResourceAllocationSettingData extends ManagedElement {
          return new ResourceAllocationSettingData(elementName, instanceID, caption, description, address,
                addressOnParent, allocationUnits, automaticAllocation, automaticDeallocation, consumerVisibility, limit,
                mappingBehavior, otherResourceType, parent, poolID, reservation, resourceSubType, resourceType,
-               virtualQuantity, virtualQuantityUnits, weight, connections, hostResources);
+               virtualQuantity, virtualQuantityUnits, weight, connections, hostResources, type, href, links);
       }
 
       public Builder fromResourceAllocationSettingData(ResourceAllocationSettingData in) {
-         return fromManagedElement(in).address(in.getAddress()).addressOnParent(in.getAddressOnParent())
-               .allocationUnits(in.getAllocationUnits()).automaticAllocation(in.isAutomaticAllocation())
-               .automaticDeallocation(in.isAutomaticDeallocation()).consumerVisibility(in.getConsumerVisibility())
-               .limit(in.getLimit()).mappingBehavior(in.getMappingBehavior())
-               .otherResourceType(in.getOtherResourceType()).parent(in.getParent()).poolID(in.getPoolID())
-               .reservation(in.getReservation()).resourceSubType(in.getResourceSubType())
-               .resourceType(in.getResourceType()).virtualQuantity(in.getVirtualQuantity())
-               .virtualQuantityUnits(in.getVirtualQuantityUnits()).weight(in.getWeight())
-               .connections(in.getConnections()).hostResources(in.getHostResources());
+         return elementName(in.getElementName())
+               .instanceID(in.getInstanceID())
+               .caption(in.getCaption())
+               .description(in.getDescription())
+               .address(in.getAddress())
+               .addressOnParent(in.getAddressOnParent())
+               .allocationUnits(in.getAllocationUnits())
+               .automaticAllocation(in.isAutomaticAllocation())
+               .automaticDeallocation(in.isAutomaticDeallocation())
+               .consumerVisibility(in.getConsumerVisibility())
+               .limit(in.getLimit())
+               .mappingBehavior(in.getMappingBehavior())
+               .otherResourceType(in.getOtherResourceType())
+               .parent(in.getParent())
+               .poolID(in.getPoolID())
+               .reservation(in.getReservation())
+               .resourceSubType(in.getResourceSubType())
+               .resourceType(in.getResourceType())
+               .virtualQuantity(in.getVirtualQuantity())
+               .virtualQuantityUnits(in.getVirtualQuantityUnits())
+               .weight(in.getWeight())
+               .connections(in.getConnections())
+               .hostResources(in.getHostResources())
+               .type(in.getType())
+               .href(in.getHref())
+               .links(Sets.newLinkedHashSet(in.getLinks()));
       }
-
-      /**
-       * {@inheritDoc}
-       */
-      @Override
-      public Builder fromManagedElement(ManagedElement in) {
-         return Builder.class.cast(super.fromManagedElement(in));
-      }
-
-      /**
-       * {@inheritDoc}
-       */
-      @Override
-      public Builder caption(String caption) {
-         return Builder.class.cast(super.caption(caption));
-      }
-
-      /**
-       * {@inheritDoc}
-       */
-      @Override
-      public Builder description(String description) {
-         return Builder.class.cast(super.description(description));
-      }
-
-      /**
-       * {@inheritDoc}
-       */
-      @Override
-      public Builder elementName(String elementName) {
-         return Builder.class.cast(super.elementName(elementName));
-      }
-
-      /**
-       * {@inheritDoc}
-       */
-      @Override
-      public Builder instanceID(String instanceID) {
-         return Builder.class.cast(super.instanceID(instanceID));
-      }
-
    }
 
    /**
     * The type of resource this allocation setting represents.
     */
+   @XmlType
+   @XmlEnum(Integer.class)
    public static enum ResourceType {
-
-      OTHER(1), COMPUTER_SYSTEM(2), PROCESSOR(3), MEMORY(4), IDE_CONTROLLER(5), PARALLEL_SCSI_HBA(6), FC_HBA(7), ISCSI_HBA(
-            8), IB_HCA(9), ETHERNET_ADAPTER(10), OTHER_NETWORK_ADAPTER(11), IO_SLOT(12), IO_DEVICE(13), FLOPPY_DRIVE(14), CD_DRIVE(
-            15), DVD_DRIVE(16), DISK_DRIVE(17), TAPE_DRIVE(18), STORAGE_EXTENT(19), OTHER_STORAGE_DEVICE(20), SERIAL_PORT(
-            21), PARALLEL_PORT(22), USB_CONTROLLER(23), GRAPHICS_CONTROLLER(24), IEEE_1394_CONTROLLER(25), PARTITIONABLE_UNIT(
-            26), BASE_PARTITIONABLE_UNIT(27), POWER(28), COOLING_CAPACITY(29), ETHERNET_SWITCH_PORT(30), LOGICAL_DISK(
-            31), STORAGE_VOLUME(32), ETHERNET_CONNECTION(33), DMTF_RESERVED(Integer.valueOf("8000", 16)), VENDOR_RESERVED(
-            Integer.valueOf("FFFF", 16));
+      @XmlEnumValue("1") OTHER(1),
+      @XmlEnumValue("2") COMPUTER_SYSTEM(2),
+      @XmlEnumValue("3") PROCESSOR(3),
+      @XmlEnumValue("4") MEMORY(4),
+      @XmlEnumValue("5") IDE_CONTROLLER(5),
+      @XmlEnumValue("6") PARALLEL_SCSI_HBA(6),
+      @XmlEnumValue("7") FC_HBA(7),
+      @XmlEnumValue("8") ISCSI_HBA(8),
+      @XmlEnumValue("9") IB_HCA(9),
+      @XmlEnumValue("10") ETHERNET_ADAPTER(10),
+      @XmlEnumValue("11") OTHER_NETWORK_ADAPTER(11),
+      @XmlEnumValue("12") IO_SLOT(12),
+      @XmlEnumValue("13") IO_DEVICE(13),
+      @XmlEnumValue("14") FLOPPY_DRIVE(14),
+      @XmlEnumValue("15") CD_DRIVE(15),
+      @XmlEnumValue("16") DVD_DRIVE(16),
+      @XmlEnumValue("17") DISK_DRIVE(17),
+      @XmlEnumValue("18") TAPE_DRIVE(18),
+      @XmlEnumValue("19") STORAGE_EXTENT(19),
+      @XmlEnumValue("20") OTHER_STORAGE_DEVICE(20),
+      @XmlEnumValue("21") SERIAL_PORT(21),
+      @XmlEnumValue("22") PARALLEL_PORT(22),
+      @XmlEnumValue("23") USB_CONTROLLER(23),
+      @XmlEnumValue("24") GRAPHICS_CONTROLLER(24),
+      @XmlEnumValue("25") IEEE_1394_CONTROLLER(25),
+      @XmlEnumValue("26") PARTITIONABLE_UNIT(26),
+      @XmlEnumValue("27") BASE_PARTITIONABLE_UNIT(27),
+      @XmlEnumValue("28") POWER(28),
+      @XmlEnumValue("29") COOLING_CAPACITY(29),
+      @XmlEnumValue("30") ETHERNET_SWITCH_PORT(30),
+      @XmlEnumValue("31") LOGICAL_DISK(31),
+      @XmlEnumValue("32") STORAGE_VOLUME(32),
+      @XmlEnumValue("33") ETHERNET_CONNECTION(33),
+      @XmlEnumValue("32768") DMTF_RESERVED(Integer.valueOf("8000", 16)),
+      @XmlEnumValue("65535") VENDOR_RESERVED(Integer.valueOf("FFFF", 16));
 
       protected final int code;
 
@@ -332,47 +420,52 @@ public class ResourceAllocationSettingData extends ManagedElement {
       }
 
       public String value() {
-         return code + "";
+         return Integer.toString(code);
       }
 
       protected final static Map<Integer, ResourceType> RESOURCE_TYPE_BY_ID = Maps.uniqueIndex(
             ImmutableSet.copyOf(ResourceType.values()), new Function<ResourceType, Integer>() {
-
                @Override
                public Integer apply(ResourceType input) {
                   return input.code;
                }
-
             });
 
       public static ResourceType fromValue(String type) {
-         return RESOURCE_TYPE_BY_ID.get(new Integer(checkNotNull(type, "type")));
+         return RESOURCE_TYPE_BY_ID.get(Integer.valueOf(checkNotNull(type, "type")));
       }
    }
 
    /**
     * Describes the consumers visibility to the allocated resource.
     */
+   @XmlType
+   @XmlEnum(Integer.class)
    public static enum ConsumerVisibility {
-      UNKNOWN(0),
+      @XmlEnumValue("0") UNKNOWN(0),
+
       /**
        * indicates the underlying or host resource is utilized and passed
        * through to the consumer, possibly using partitioning. At least one item
        * shall be present in the HostResource property.
        */
-      PASSED_THROUGH(2),
+      @XmlEnumValue("2") PASSED_THROUGH(2),
+
       /**
        * indicates the resource is virtualized and may not map directly to an
        * underlying/host resource. Some implementations may support specific
        * assignment for virtualized resources, in which case the host
        * resource(s) are exposed using the HostResource property.
        */
-      VIRTUALIZED(3),
+      @XmlEnumValue("3") VIRTUALIZED(3),
+
       /**
        * indicates a representation of the resource does not exist within the
        * context of the resource consumer.
        */
-      NOT_REPRESENTED(4), DMTF_RESERVED(32767), VENDOR_RESERVED(65535);
+      @XmlEnumValue("4") NOT_REPRESENTED(4),
+      @XmlEnumValue("32768") DMTF_RESERVED(Integer.valueOf("8000", 16)),
+		@XmlEnumValue("65535") VENDOR_RESERVED(Integer.valueOf("FFFF", 16));
 
       protected final int code;
 
@@ -381,21 +474,19 @@ public class ResourceAllocationSettingData extends ManagedElement {
       }
 
       public String value() {
-         return code + "";
+         return Integer.toString(code);
       }
 
       protected final static Map<Integer, ConsumerVisibility> MAPPING_BEHAVIOR_BY_ID = Maps.uniqueIndex(
             ImmutableSet.copyOf(ConsumerVisibility.values()), new Function<ConsumerVisibility, Integer>() {
-
                @Override
                public Integer apply(ConsumerVisibility input) {
                   return input.code;
                }
-
             });
 
       public static ConsumerVisibility fromValue(String behavior) {
-         return MAPPING_BEHAVIOR_BY_ID.get(new Integer(checkNotNull(behavior, "behavior")));
+         return MAPPING_BEHAVIOR_BY_ID.get(Integer.valueOf(checkNotNull(behavior, "behavior")));
       }
    }
 
@@ -404,9 +495,16 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * HostResource array contains any entries, this property reflects how the
     * resource maps to those specific resources.
     */
+   @XmlType
+   @XmlEnum(Integer.class)
    public static enum MappingBehavior {
-      UNKNOWN(0), NOT_SUPPORTED(2), DEDICATED(3), SOFT_AFFINITY(4), HARD_AFFINITY(5), DMTF_RESERVED(32767), VENDOR_RESERVED(
-            65535);
+      @XmlEnumValue("0") UNKNOWN(0),
+      @XmlEnumValue("2") NOT_SUPPORTED(2),
+      @XmlEnumValue("3") DEDICATED(3),
+      @XmlEnumValue("4") SOFT_AFFINITY(4),
+      @XmlEnumValue("5") HARD_AFFINITY(5),
+      @XmlEnumValue("32768") DMTF_RESERVED(Integer.valueOf("8000", 16)),
+		@XmlEnumValue("65535") VENDOR_RESERVED(Integer.valueOf("FFFF", 16));
 
       protected final int code;
 
@@ -415,51 +513,85 @@ public class ResourceAllocationSettingData extends ManagedElement {
       }
 
       public String value() {
-         return code + "";
+         return Integer.toString(code);
       }
 
       protected final static Map<Integer, MappingBehavior> MAPPING_BEHAVIOR_BY_ID = Maps.uniqueIndex(
             ImmutableSet.copyOf(MappingBehavior.values()), new Function<MappingBehavior, Integer>() {
-
                @Override
                public Integer apply(MappingBehavior input) {
                   return input.code;
                }
-
             });
 
       public static MappingBehavior fromValue(String behavior) {
-         return MAPPING_BEHAVIOR_BY_ID.get(new Integer(checkNotNull(behavior, "behavior")));
+         return MAPPING_BEHAVIOR_BY_ID.get(Integer.valueOf(checkNotNull(behavior, "behavior")));
       }
    }
 
-   protected String address;
-   protected String addressOnParent;
-   protected String allocationUnits;
-   protected Boolean automaticAllocation;
-   protected Boolean automaticDeallocation;
+   @XmlElement(name = "ElementName", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString elementName;
+   @XmlElement(name = "InstanceID", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString instanceID;
+   @XmlElement(name = "Caption", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString caption;
+   @XmlElement(name = "Description", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString description;
+   @XmlElement(name = "Address", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString address;
+   @XmlElement(name = "AddressOnParent", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString addressOnParent;
+   @XmlElement(name = "AllocationUnits", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString allocationUnits;
+   @XmlElement(name = "AutomaticAllocation", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimBoolean automaticAllocation;
+   @XmlElement(name = "AutomaticDeallocation", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimBoolean automaticDeallocation;
+   @XmlElement(name = "ConsumerVisibility", namespace = VCLOUD_CIM_RASD_NS)
    protected ConsumerVisibility consumerVisibility;
-   protected Long limit;
+   @XmlElement(name = "Limit", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimUnsignedLong limit;
+   @XmlElement(name = "MappingBehavior", namespace = VCLOUD_CIM_RASD_NS)
    protected MappingBehavior mappingBehavior;
-   protected String otherResourceType;
-   protected String parent;
-   protected String poolID;
-   protected Long reservation;
-   protected String resourceSubType;
+   @XmlElement(name = "OtherResourceType", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString otherResourceType;
+   @XmlElement(name = "Parent", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString parent;
+   @XmlElement(name = "PoolID", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString poolID;
+   @XmlElement(name = "Reservation", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimUnsignedLong reservation;
+   @XmlElement(name = "ResourceSubType", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString resourceSubType;
+   @XmlElement(name = "ResourceType", namespace = VCLOUD_CIM_RASD_NS)
    protected ResourceType resourceType;
-   protected Long virtualQuantity;
-   protected String virtualQuantityUnits;
-   protected Integer weight;
-   protected List<String> connections;
-   protected List<String> hostResources;
+   @XmlElement(name = "VirtualQuantity", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimUnsignedLong virtualQuantity;
+   @XmlElement(name = "VirtualQuantityUnits", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimString virtualQuantityUnits;
+   @XmlElement(name = "Weight", namespace = VCLOUD_CIM_RASD_NS)
+   protected CimUnsignedInt weight;
+   @XmlElement(name = "Connection", namespace = VCLOUD_CIM_RASD_NS)
+   protected List<CimString> connections;
+   @XmlElement(name = "HostResource", namespace = VCLOUD_CIM_RASD_NS)
+   protected List<CimString> hostResources;
+   @XmlAttribute(name = "type", namespace = VCLOUD_1_5_NS)
+   protected String type;
+   @XmlAttribute(name = "href", namespace = VCLOUD_1_5_NS)
+   protected URI href;
+   @XmlElement(name = "Link", namespace = VCLOUD_1_5_NS)
+   private Set<Link> links = Sets.newLinkedHashSet();
 
-   private ResourceAllocationSettingData(String elementName, String instanceID, String caption, String description,
-         String address, String addressOnParent, String allocationUnits, Boolean automaticAllocation,
-         Boolean automaticDeallocation, ConsumerVisibility consumerVisibility, Long limit,
-         MappingBehavior mappingBehavior, String otherResourceType, String parent, String poolID, Long reservation,
-         String resourceSubType, ResourceType resourceType, Long virtualQuantity, String virtualQuantityUnits,
-         Integer weight, List<String> connections, List<String> hostResources) {
-      super(elementName, instanceID, caption, description);
+   private ResourceAllocationSettingData(CimString elementName, CimString instanceID, CimString caption, CimString description,
+         CimString address, CimString addressOnParent, CimString allocationUnits, CimBoolean automaticAllocation,
+         CimBoolean automaticDeallocation, ConsumerVisibility consumerVisibility, CimUnsignedLong limit,
+         MappingBehavior mappingBehavior, CimString otherResourceType, CimString parent, CimString poolID, CimUnsignedLong reservation,
+         CimString resourceSubType, ResourceType resourceType, CimUnsignedLong virtualQuantity, CimString virtualQuantityUnits,
+         CimUnsignedInt weight, List<CimString> connections, List<CimString> hostResources, String type, URI href, Set<Link> links) {
+      this.elementName = elementName;
+      this.instanceID = instanceID;
+      this.caption = caption;
+      this.description = description;
       this.address = address;
       this.addressOnParent = addressOnParent;
       this.allocationUnits = allocationUnits;
@@ -479,17 +611,51 @@ public class ResourceAllocationSettingData extends ManagedElement {
       this.weight = weight;
       this.connections = ImmutableList.copyOf(connections);
       this.hostResources = ImmutableList.copyOf(hostResources);
+      this.type = type;
+      this.href = href;
+      this.links = links != null ? ImmutableSet.copyOf(links) : Collections.<Link>emptySet();
    }
 
    private ResourceAllocationSettingData() {
       // for JAXB
+   }
+
+   /**
+    * The user-friendly name for this instance of SettingData. In addition, the user-friendly name
+    * can be used as an index property for a search or query. (Note: The name does not have to be
+    * unique within a namespace.)
+    */
+   public CimString getElementName() {
+      return elementName;
+   }
+
+   /**
+    * Within the scope of the instantiating Namespace, InstanceID opaquely and uniquely identifies
+    * an instance of this class.
+    */
+   public CimString getInstanceID() {
+      return instanceID;
+   }
+
+   /**
+    * The Caption property is a short textual description (one- line string) of the object.
+    */
+   public CimString getCaption() {
+      return caption;
+   }
+
+   /**
+    * The Description property provides a textual description of the object.
+    */
+   public CimString getDescription() {
+      return description;
    }
    
    /**
     * The address of the resource. For example, the MAC address of a Ethernet
     * port.
     */
-   public String getAddress() {
+   public CimString getAddress() {
       return address;
    }
 
@@ -500,7 +666,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * if the parent is a PCI Controller, this property would specify the PCI
     * slot of this child device.
     */
-   public String getAddressOnParent() {
+   public CimString getAddressOnParent() {
       return addressOnParent;
    }
 
@@ -514,7 +680,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * value of the Programmatic Units qualifier as defined in Annex C.1 of
     * DSP0004 V2.5 or later.
     */
-   public String getAllocationUnits() {
+   public CimString getAllocationUnits() {
       return allocationUnits;
    }
 
@@ -527,7 +693,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * on time, the media is not present. An explicit operation is required to
     * allocate the resource.
     */
-   public Boolean isAutomaticAllocation() {
+   public CimBoolean isAutomaticAllocation() {
       return automaticAllocation;
    }
 
@@ -538,7 +704,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * set to false, the resource will remain allocated and must be explicitly
     * de-allocated.
     */
-   public Boolean isAutomaticDeallocation() {
+   public CimBoolean isAutomaticDeallocation() {
       return automaticDeallocation;
    }
 
@@ -557,7 +723,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * for this allocation. The value of the Limit property is expressed in the
     * unit specified by the value of the AllocationUnits property.
     */
-   public Long getLimit() {
+   public CimUnsignedLong getLimit() {
       return limit;
    }
 
@@ -574,7 +740,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * A string that describes the resource type when a well defined value is not
     * available and ResourceType has the value "Other".
     */
-   public String getOtherResourceType() {
+   public CimString getOtherResourceType() {
       return otherResourceType;
    }
 
@@ -582,7 +748,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * The Parent of the resource. For example, a controller for the current
     * allocation
     */
-   public String getParent() {
+   public CimString getParent() {
       return parent;
    }
 
@@ -591,7 +757,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * allocated from, or which ResourcePool the resource will be allocated from
     * when the allocation occurs.
     */
-   public String getPoolID() {
+   public CimString getPoolID() {
       return poolID;
    }
 
@@ -603,7 +769,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * the Reservation property is expressed in the unit specified by the value
     * of the AllocationUnits property.
     */
-   public Long getReservation() {
+   public CimUnsignedLong getReservation() {
       return reservation;
    }
 
@@ -611,7 +777,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * A string describing an implementation specific sub-type for this resource.
     * F
     */
-   public String getResourceSubType() {
+   public CimString getResourceSubType() {
       return resourceSubType;
    }
 
@@ -631,7 +797,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * VirtualQuantity property should be expressed in units as defined by the
     * value of the VirtualQuantityUnits property.
     */
-   public Long getVirtualQuantity() {
+   public CimUnsignedLong getVirtualQuantity() {
       return virtualQuantity;
    }
 
@@ -647,7 +813,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * this property shall be a legal value of the Programmatic Units qualifier
     * as defined in Annex C.1 of DSP0004 V2.5 or later.
     */
-   public String getVirtualQuantityUnits() {
+   public CimString getVirtualQuantityUnits() {
       return virtualQuantityUnits;
    }
 
@@ -657,7 +823,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * has no unit of measure, and is only relevant when compared to other
     * allocations vying for the same host resources.
     */
-   public Integer getWeight() {
+   public CimUnsignedInt getWeight() {
       return weight;
    }
 
@@ -665,7 +831,7 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * The thing to which this resource is connected. For example, a named
     * network or switch port.
     */
-   public List<String> getConnections() {
+   public List<CimString> getConnections() {
       return Collections.unmodifiableList(connections);
    }
 
@@ -687,30 +853,65 @@ public class ResourceAllocationSettingData extends ManagedElement {
     * value(s) to indicate that the requested virtual resource allocation be
     * based on host resources that are identified by element values.
     */
-   public List<String> getHostResources() {
+   public List<CimString> getHostResources() {
       return Collections.unmodifiableList(hostResources);
+   }
+
+   public String getType() {
+      return type;
+   }
+
+   public URI getHref() {
+      return href;
+   }
+
+   /**
+    * Set of optional links to an entity or operation associated with this object.
+    */
+   public Set<Link> getLinks() {
+      return links != null ? ImmutableSet.copyOf(links) : Collections.<Link>emptySet();
    }
 
    @Override
    public String toString() {
-      return String
-            .format(
-                  "[elementName=%s, instanceID=%s, caption=%s, description=%s, address=%s, addressOnParent=%s, allocationUnits=%s, automaticAllocation=%s, automaticDeallocation=%s, connections=%s, consumerVisibility=%s, hostResources=%s, limit=%s, mappingBehavior=%s, otherResourceType=%s, parent=%s, poolID=%s, reservation=%s, resourceSubType=%s, resourceType=%s, virtualQuantity=%s, virtualQuantityUnits=%s, weight=%s]",
-                  elementName, instanceID, caption, description, address, addressOnParent, allocationUnits,
-                  automaticAllocation, automaticDeallocation, connections, consumerVisibility, hostResources, limit,
-                  mappingBehavior, otherResourceType, parent, poolID, reservation, resourceSubType, resourceType,
-                  virtualQuantity, virtualQuantityUnits, weight);
+      return Objects.toStringHelper("")
+            .add("elementname", elementName)
+            .add("instanceId", instanceID)
+            .add("caption", caption)
+            .add("description", description)
+            .add("address", address)
+            .add("addressOnParent", addressOnParent)
+            .add("allocationUnits", allocationUnits)
+            .add("automaticAllocation", automaticAllocation)
+            .add("automaticDeallocation", automaticDeallocation)
+            .add("connections", connections)
+            .add("consumerVisibility", consumerVisibility)
+            .add("hostResources", hostResources)
+            .add("limit", limit)
+            .add("mappingBehavior", mappingBehavior)
+            .add("otherResourceType", otherResourceType)
+            .add("parent", parent)
+            .add("poolID", poolID)
+            .add("reservation", reservation)
+            .add("resourceSubType", resourceSubType)
+            .add("resourceType", resourceType)
+            .add("virtualQuantity", virtualQuantity)
+            .add("virtualQuantityUnits", virtualQuantityUnits)
+            .add("weight", weight)
+            .add("type", type)
+            .add("href", href)
+            .add("links", links)
+            .toString();
    }
 
    @Override
    public int hashCode() {
-      final int prime = 31;
-      int result = super.hashCode();
-      result = prime * result + ((address == null) ? 0 : address.hashCode());
-      result = prime * result + ((addressOnParent == null) ? 0 : addressOnParent.hashCode());
-      result = prime * result + ((resourceSubType == null) ? 0 : resourceSubType.hashCode());
-      result = prime * result + ((resourceType == null) ? 0 : resourceType.hashCode());
-      return result;
+      return Objects.hashCode(elementName, instanceID, caption, description,
+            address, addressOnParent, allocationUnits,
+            automaticAllocation, automaticDeallocation, connections,
+            consumerVisibility, hostResources, limit, mappingBehavior,
+            otherResourceType, parent, poolID, reservation, resourceSubType,
+            resourceType, virtualQuantity, virtualQuantityUnits, weight, type, href, links);
    }
 
    @Override
@@ -721,28 +922,34 @@ public class ResourceAllocationSettingData extends ManagedElement {
          return false;
       if (getClass() != obj.getClass())
          return false;
-      ResourceAllocationSettingData other = (ResourceAllocationSettingData) obj;
-      if (address == null) {
-         if (other.address != null)
-            return false;
-      } else if (!address.equals(other.address))
-         return false;
-      if (addressOnParent == null) {
-         if (other.addressOnParent != null)
-            return false;
-      } else if (!addressOnParent.equals(other.addressOnParent))
-         return false;
-      if (resourceSubType == null) {
-         if (other.resourceSubType != null)
-            return false;
-      } else if (!resourceSubType.equals(other.resourceSubType))
-         return false;
-      if (resourceType == null) {
-         if (other.resourceType != null)
-            return false;
-      } else if (!resourceType.equals(other.resourceType))
-         return false;
-      return true;
+      ResourceAllocationSettingData that = ResourceAllocationSettingData.class.cast(obj);
+      return equal(this.elementName, that.elementName) &&
+            equal(this.instanceID, that.instanceID) &&
+            equal(this.caption, that.caption) &&
+            equal(this.description, that.description) &&
+            equal(this.address, that.address) &&
+            equal(this.addressOnParent, that.addressOnParent) &&
+            equal(this.allocationUnits, that.allocationUnits) &&
+            equal(this.automaticAllocation, that.automaticAllocation) &&
+            equal(this.automaticDeallocation, that.automaticDeallocation) &&
+            equal(this.connections, that.connections) &&
+            equal(this.consumerVisibility, that.consumerVisibility) &&
+            equal(this.hostResources, that.hostResources) &&
+            equal(this.limit, that.limit) &&
+            equal(this.mappingBehavior, that.mappingBehavior) &&
+            equal(this.otherResourceType, that.otherResourceType) &&
+            equal(this.parent, that.parent) &&
+            equal(this.poolID, that.poolID) &&
+            equal(this.reservation, that.reservation) &&
+            equal(this.resourceSubType, that.resourceSubType) &&
+            equal(this.resourceType, that.resourceType) &&
+            equal(this.virtualQuantity, that.virtualQuantity) &&
+            equal(this.virtualQuantityUnits, that.virtualQuantityUnits) &&
+            equal(this.weight, that.weight) &&
+            equal(this.type, that.type) &&
+            equal(this.href, that.href) &&
+            equal(this.links, that.links);
+            
    }
 
 }
